fix: experience section not align in production

--- a/experience.css
+++ b/experience.css
@@ -3,6 +3,9 @@
   margin: 20px;
   padding-top: 100px;
   border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #experience h1 {
